// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAvailableDrillTargets > gets propper available drill targets - ignoring column attributes 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
      ],
    },
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.owner.department",
            "name": "Department",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1088",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1088",
          },
          "identifier": "label.owner.department",
          "localIdentifier": "a_label.owner.department",
          "name": "Department",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1089",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1089",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.department",
              "name": "Department",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1088",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1088",
            },
            "identifier": "label.owner.department",
            "localIdentifier": "a_label.owner.department",
            "name": "Department",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1089",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1089",
          },
        },
      ],
    },
  ],
  "measures": [
    {
      "attributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.department",
              "name": "Department",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1088",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1088",
            },
            "identifier": "label.owner.department",
            "localIdentifier": "a_label.owner.department",
            "name": "Department",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1089",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1089",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.opportunitysnapshot.forecastcategory",
              "name": "Forecast Category",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1062",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1062",
            },
            "identifier": "label.opportunitysnapshot.forecastcategory",
            "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
            "name": "Forecast Category",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1063",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1063",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.region",
              "name": "Region",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1086",
            },
            "identifier": "label.owner.region",
            "localIdentifier": "a_label.owner.region",
            "name": "Region",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1087",
          },
        },
      ],
      "measure": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    },
    {
      "attributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.department",
              "name": "Department",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1088",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1088",
            },
            "identifier": "label.owner.department",
            "localIdentifier": "a_label.owner.department",
            "name": "Department",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1089",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1089",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.opportunitysnapshot.forecastcategory",
              "name": "Forecast Category",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1062",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1062",
            },
            "identifier": "label.opportunitysnapshot.forecastcategory",
            "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
            "name": "Forecast Category",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1063",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1063",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.region",
              "name": "Region",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1086",
            },
            "identifier": "label.owner.region",
            "localIdentifier": "a_label.owner.region",
            "name": "Region",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1087",
          },
        },
      ],
      "measure": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    },
  ],
}
`;

exports[`getAvailableDrillTargets > gets propper available drill targets for duplicated row attribute 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
      ],
    },
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.owner.region",
            "name": "Region",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1086",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1086",
          },
          "identifier": "label.owner.region",
          "localIdentifier": "a_label.owner.region",
          "name": "Region",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1087",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1087",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.region",
              "name": "Region",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1086",
            },
            "identifier": "label.owner.region",
            "localIdentifier": "a_label.owner.region",
            "name": "Region",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1087",
          },
        },
      ],
    },
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "product.name.test",
          "name": "Product Name",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.region",
              "name": "Region",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1086",
            },
            "identifier": "label.owner.region",
            "localIdentifier": "a_label.owner.region",
            "name": "Region",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1087",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "product.name.test",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
      ],
    },
  ],
  "measures": [
    {
      "attributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "a_label.product.id.name",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.owner.region",
              "name": "Region",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1086",
            },
            "identifier": "label.owner.region",
            "localIdentifier": "a_label.owner.region",
            "name": "Region",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1087",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.product.id",
              "name": "Product",
              "ref": {
                "uri": "/gdc/md/referenceworkspace/obj/1054",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "identifier": "label.product.id.name",
            "localIdentifier": "product.name.test",
            "name": "Product Name",
            "ref": {
              "uri": "/gdc/md/referenceworkspace/obj/1055",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
        },
      ],
      "measure": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    },
  ],
}
`;
